# crc32-autotune-rs

./: .gitignore  AUTOTUNE.md  Cargo.toml  README.md  results.tsv
benches/: benchmark.rs
examples/: compare.rs
src/: crc32.rs  lib.rs  main.rs
