[package]
name = "crc32_autotune"
version = "0.1.0"
edition = "2021"
description = "CRC32 performance auto-optimization using AI agents"
authors = ["AutoResearch"]

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
crc32fast = "1.4"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1